--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: CloudRack CasaOS App Repo
-description: Cloudrack CasaOS App Repo Is Built To Help Users Expand Their Already Expanding Cloud Using CasaOS.io
+title: CloudRack Wordpress Bash install Script
+description: CloudRack Wordpress Bash install Script
 show_downloads: false
