--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Not used as wiki.cloudrack.ca will be cloudrack.ca
-remote_theme: pages-themes/time-machine@v0.2.0
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
-- jekyll-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: CloudRack Wordpress Bash install Script
 description: CloudRack Wordpress Bash install Script
 show_downloads: false
